[project]
name = "abmap"
version = "0.1.1"
authors = [
  { name="Chiho Im", email="chihoim@mit.edu" },
  { name="Rohit Singh", email="rohitsingh@gmail.com" }
]
description = "AbMAP: Antibody Mutagenesis Augmented Processing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
