[project]
name = "abmap"
version = "0.1.6"
authors = [
  { name="Chiho Im", email="chihoim@mit.edu" },
  { name="Rohit Singh", email="rohitsingh@gmail.com" }
]
description = "AbMAP: Antibody Mutagenesis Augmented Processing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
abmap = "abmap.__main__:main"

[tool.setuptools.package-data]
abmap = ["*.hmm", "*.hmm.h3f", "*.hmm.h3i", "*.hmm.h3m", "*.hmm.h3p"]
